<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#ffb2ff"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:src="@drawable/yaumifont"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="130dp"
                android:src="@drawable/logoyawmi"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:id="@+id/linear_login_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusableInTouchMode="true">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="10dp"
                    android:hint="@string/username"
                    android:textColorHint="#f5f5f5"
                    android:inputType="textEmailAddress"
                    android:textColor="#fff"
                    android:maxLines="1"
                    android:background="@drawable/shaper_drawable"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/password"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/password"
                    android:textColorHint="#f5f5f5"
                    android:paddingLeft="10dp"
                    android:textColor="#fff"
                    android:background="@drawable/shaper_drawable"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </LinearLayout>


            <View
                android:layout_height="0dp"
                android:layout_width="0dp"
                android:layout_marginBottom="20dp" />

            <LinearLayout
                android:id="@+id/login_btn_cont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    app:cardBackgroundColor="#ff00ff"
                    app:contentPadding="5dp"
                    app:cardElevation="0dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textStyle="bold"
                    android:focusable="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in_b"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="#fff"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/registering_button"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    app:cardBackgroundColor="#fff"
                    app:contentPadding="5dp"
                    app:cardElevation="0dp"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textStyle="bold"
                    android:focusable="true" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_gravity="center_horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:src="@drawable/googleg_standard_color_18"/>

                        <View
                            android:layout_width="10dp"
                            android:layout_height="match_parent"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/register"
                            android:layout_gravity="center"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>