<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profil_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbarview" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/grid_profil"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        grid:alignmentMode="alignBounds"
        grid:columnCount="2"
        app:rowCount="3"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:id="@+id/bt_profil"
            android:layout_width="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#ff7b00"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            grid:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_users" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/your_name"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cardview_loc"
            android:layout_width="0dp"
            app:cardCornerRadius="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#94cb71"
            app:cardElevation="0dp"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            grid:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_location" />

                <TextView
                    android:id="@+id/aptx_set_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/kota"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/bt_aploc"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="#81b362"
                android:layout_gravity="bottom"
                android:text="@string/perbarui"
                android:textColor="#fff" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            app:cardCornerRadius="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#c228d6"
            app:cardElevation="0dp"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            grid:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_chat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/notifikasi_artikel"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:background="#991fa9"
                android:layout_gravity="bottom|center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="OFF"
                    android:layout_gravity="center_vertical"
                    android:textColor="#fff"/>

                <View
                    android:layout_width="15dp"
                    android:layout_height="0dp" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:checked="false" />

                <View
                    android:layout_width="15dp"
                    android:layout_height="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ON"
                    android:layout_gravity="center_vertical"
                    android:textColor="#fff"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btn_grafik_me"
            android:layout_width="0dp"
            app:cardCornerRadius="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#06acb9"
            app:cardElevation="0dp"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            grid:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_graph" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/grafik"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/bt_riwayat"
            android:layout_width="0dp"
            app:cardCornerRadius="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#002fff"
            app:cardElevation="0dp"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            grid:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_calendar_with_a_clock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/riwayat"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btn_logout"
            android:layout_width="0dp"
            app:cardCornerRadius="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#ff0a12"
            app:cardElevation="0dp"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            grid:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_exit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/logoutme"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v7.widget.GridLayout>

</android.support.design.widget.CoordinatorLayout>