<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="89dp"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:id="@+id/topContent"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintStart_toStartOf="@+id/gridLayout"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/bg_header"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/zuhur">

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="#26517A"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingLeft="5dp">

            <TextView
                android:id="@+id/tx_adzan"
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=":"
                android:textSize="20dp"
                android:textColor="#fff"/>

            <View
                android:layout_width="10dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/tx_waktusholat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <!--android:id="@+id/btn_jadwal_adzan"-->

            <RelativeLayout
                android:id="@+id/btn_jadwal_adzan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:clickable="true"
                android:gravity="center_horizontal|center_vertical"
                android:background="#1E4264"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#fff"
                    android:text="Lihat Jadwal"
                    android:textSize="16sp"/>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topContent"
        grid:alignmentMode="alignBounds"
        grid:columnCount="2">

        <!-- col1 -->
        <android.support.v7.widget.CardView
            android:id="@+id/bt_amalan"
            android:layout_width="0dp"
            app:cardCornerRadius="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#1abc9c"
            app:cardElevation="0dp"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            grid:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_to_do_list" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Amalan Harian"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/bt_profil"
            android:layout_width="0dp"
            app:cardCornerRadius="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#3498db"
            app:cardElevation="0dp"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            grid:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_cog" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/pengaturan"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/bt_artikel"
            android:layout_width="0dp"
            app:cardCornerRadius="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#e74c3c"
            app:cardElevation="0dp"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            grid:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_newspaper" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/artikel"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/btn_about_me"
            android:layout_width="0dp"
            app:cardCornerRadius="0dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#7f8c8d"
            app:cardElevation="0dp"
            grid:layout_columnWeight="1"
            grid:layout_gravity="fill_horizontal"
            grid:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_question" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/aboutme"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="18sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v7.widget.GridLayout>

</android.support.constraint.ConstraintLayout>